--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -18,6 +18,10 @@ body {
     caret-color: transparent;
 }
 
+p.legal {
+    font-size: 0.75rem;
+}
+
 .add-goal {
     height: 5rem;
     width: 5rem;
@@ -102,13 +106,36 @@ body {
     margin: 1rem 0;
     border-radius: 0.5rem;
     box-sizing: border-box;
+    position: relative;
+
+    &.minimize {
+        height: 55px;
+        overflow: hidden;
+        &::after {
+            border-color: transparent white white transparent;
+            top: 1rem
+        }
+    }
+    &::after {
+        content: "";
+        border: solid 3px #fff;
+        height: 15px;
+        width: 15px;
+        position: absolute;
+        top: 1.5rem;
+        right: 1rem;
+        border-color: white transparent transparent white;
+        rotate: 45deg;
+    }
 
     .heading {
+        cursor: pointer;
         background-color: @Spring-Blossoms-Colorful-3-rgba;
         color: @white;
         padding: 1rem;
         border-top-right-radius: 0.5rem;
         border-top-left-radius: 0.5rem;
+        text-transform: capitalize;
     }
 
     .content {
@@ -120,11 +147,36 @@ body {
         padding: 0 3.5rem 0 0.5rem;
         position: relative;
 
-        &:after {
+        input[type="text"] {
+            border: 0;
+            border-radius: 0.25rem;
+            padding: 0.5rem;
+            width: 100%;
+        }
+
+        .task-duration {
+            cursor: pointer;
+            position: absolute;
+            height: 30%;
+            width: 3.5rem;
+            right: 0;
+            text-align: center;
+
+            &.up {
+                top: 0;
+                line-height: 10px;
+            }
+            &.down {
+                bottom: 0;
+                line-height: 30px;
+            }
+        }
+
+        &::after {
             font-family: rubberstamp;
             content: attr(data-duration);
-            top: 0;
-            right: 5px;
+            top: 15px;
+            right: 0.4rem;
             position: absolute;
         }
     }
