--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -9,7 +9,7 @@
 @text: #040404;
 @font-face {
     font-family: rubberstamp;
-    src: url("http://localhost:3000/stamp.ttf");
+    src: url("http://localhost:3001/stamp.ttf");
 }
 
 body {
@@ -140,6 +140,11 @@ p.legal {
 
     .content {
         padding: 0.5rem 0;
+
+        .add-task {
+            cursor: pointer;
+            margin: 0 0.5rem;
+        }
     }
 
     .task {
