Logic to add and store Goal and tasks in localstorage complete

--- a/client/src/less/main.css
+++ b/client/src/less/main.css
@@ -162,9 +162,9 @@ p.legal {
   line-height: 30px;
 }
 .task-group .task::after {
-  font-family: rubberstamp;
   content: attr(data-duration);
   top: 15px;
   right: 0.4rem;
   position: absolute;
+  font-size: 0.9rem;
 }
