--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -178,11 +178,11 @@ p.legal {
         }
 
         &::after {
-            font-family: rubberstamp;
             content: attr(data-duration);
             top: 15px;
             right: 0.4rem;
             position: absolute;
+            font-size: 0.9rem;
         }
     }
 }
