--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -125,7 +125,7 @@ p.legal {
         color: @Spring-Blossoms-Colorful-1-rgba;
         caret-color: @Spring-Blossoms-Colorful-1-rgba;
     }
-    .col, .col-2, .col-3, .col-4, .col-6, .col-8 {
+    .col, .col-2, .col-3, .col-4, .col-6, .col-8, .col-12 {
         box-sizing: border-box;
         padding: 0.5rem;
     }
@@ -345,7 +345,7 @@ p.legal {
             content: "DONE";
             color: @Spring-Blossoms-Colorful-3-rgba;
             height: 100%;
-            width: 74px;
+            width: 80px;
             position: absolute;
             top: 0px;
             right: 0;
@@ -353,6 +353,7 @@ p.legal {
             line-height: 1.5rem;
             transform: rotate(-15deg);
             font-weight: bold;
+            text-align: center;
         }
     }
 }
