--- a/client/src/less/main.css
+++ b/client/src/less/main.css
@@ -7,6 +7,14 @@ body {
 p.legal {
   font-size: 0.75rem;
 }
+.root {
+  margin: 0 auto;
+}
+@media only screen and (min-width: 769px) {
+  .root {
+    width: 769px;
+  }
+}
 .add-goal {
   height: 5rem;
   width: 5rem;
@@ -182,6 +190,7 @@ p.legal {
   border-radius: 0.25rem;
   padding: 0.5rem;
   width: 100%;
+  background: #fff;
 }
 .task-group .task .task-duration {
   cursor: pointer;
@@ -296,7 +305,7 @@ p.legal {
 .modal-title.done::after {
   content: "DONE";
   color: #2da69a;
-  height: 100%;
+  height: 34px;
   width: 80px;
   position: absolute;
   top: 0px;
